@@ -363,6 +363,7 @@ struct instance_flags {
 #endif
 	boolean  dark_room;	/* show shadows in lit rooms */
 	boolean  vanilla_ui_behavior;	/* fall back to vanilla behavior */
+	boolean  show_annotation;	/* level annotation when entering level */
 };
 
 /*
